force-app/main/default/objects/AAR_Patent__c/AAR_Patent__c.object-meta.xml
<CustomObject>
    <label>Patent</label>
    <nameField>
        <displayFormat>PAT-{0000}</displayFormat>
        <label>Patent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>