force-app/main/default/objects/AAR_Patent__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <label>Application Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>