force-app/main/default/objects/AAR_Patent__c/fields/Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>Filing_Date__c</fullName>
    <label>Filing Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>