force-app/main/default/objects/AAR_Patent__c/fields/Patent_Title__c.field-meta.xml
<CustomField>
    <fullName>Patent_Title__c</fullName>
    <label>Patent Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>