force-app/main/default/objects/AAR_Patent__c/fields/Patent_Type__c.field-meta.xml
<CustomField>
    <fullName>Patent_Type__c</fullName>
    <label>Patent Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Provisional</fullName><default
        >false</default><label>Provisional</label></value>
            <value><fullName>Utility</fullName><default>false</default><label
        >Utility</label></value>
            <value><fullName>PCT (International)</fullName><default
        >false</default><label>PCT (International)</label></value>
            <value><fullName>Design</fullName><default>false</default><label
        >Design</label></value>
            <value><fullName>Continuation</fullName><default
        >false</default><label>Continuation</label></value>
            <value><fullName>Divisional</fullName><default>false</default><label
        >Divisional</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>